@@ -1,6 +1,8 @@
 quanteda 0.8.7
 ==============
 
+*  tokenize() has a new argument, removeHyphens, that controls the treatment of intra-word hyphens.
+
 Bug Fixes
 ---------
 *  corrected inaccurate printing of valuetype in verbose note of selectFeatures.dfm().  (Did not affect functionality.)
